added cookies in women and men

--- a/index.html
+++ b/index.html
@@ -3,8 +3,26 @@
   <head>
     <meta charset="UTF-8">
     <title>Main landing</title>
+
+    <!-- CSS -->
+
+    <link href="css/main.css" rel="stylesheet" >
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- JS -->
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.1.4/js.cookie.js"></script>
+
+
   </head>
-  <body>
+  <body class="gradientbg">
+
+    <div class="row center">
+    <h1 style="margin: 1em; color: white;">Check our latest collections for men and women</h1>
+    <a href="women.html"><img class="image" src="http://i.imgur.com/dv8umpa.png"></a>
+    <a href="men.html"><img class="image" src="http://i.imgur.com/3kUMlGq.png"></a>
+
+  </div>
 
   </body>
 </html>
