--- a/women.html
+++ b/women.html
@@ -3,8 +3,26 @@
   <head>
     <meta charset="UTF-8">
     <title>Women landing</title>
+
+
+    <!-- CSS -->
+
+    <link href="css/main.css" rel="stylesheet" >
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- JS -->
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.1.4/js.cookie.js"></script>
+
+    <script>
+    Cookies.set('gender', 'women');
+    </script>
+
   </head>
-  <body>
+  <body class="gradientbg">
+
+    <div class="row center">
+    <h1 style="margin: 1em; color: white;">Welcome to the women collection</h1>
 
   </body>
 </html>
