--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
     <!-- JS -->
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.1.4/js.cookie.js"></script>
 
@@ -17,19 +18,17 @@
   </head>
   <body class="gradientbg">
 
-    <script>
+  <script>
+    $(function() {
+      cookieXredirect('gender', 'men', '/men.html');
+      cookieXredirect('gender', 'women', '/women.html');
+    });
 
-  $(function() {
-    cookieXredirect('gender', 'men', '/men.html');
-    cookieXredirect('gender', 'women', '/women.html');
-  });
-
-  function cookieXredirect(key, value, url){
-    if(Cookies.get(key) === value) {
-      window.location.replace(url);
+    function cookieXredirect(key, value, url){
+      if(Cookies.get(key) === value) {
+        window.location.replace(url);
+      }
     }
-  }
-
   </script>
 
     <div class="row center">
